fixed z-index for button

--- a/css/common.css
+++ b/css/common.css
@@ -77,6 +77,11 @@ a:active{
     font-family: 'Open Sans',sans-serif;
     font-weight: 700;
     text-align: center;
+    z-index: 1;
+    position: relative;
+}
+.big-button:hover{
+    border-color: #fc4e52;
 }
 @media (max-width:767px){
     .product__title,.product__price{
